--- a/gifts.html
+++ b/gifts.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Snack Gift Packages</title>
+  <title>Snack Gift Packages: Have It Catered</title>
 </head>
 <body>
   <div>
@@ -23,11 +23,15 @@
       </li>
 
       <li>
+        <a href="services.html">Catering packages</a>
+      </li>
+
+      <li>
         <a href="AboutUs.html">About Us</a>
       </li>
     </ul>
 
-    <p><img src="images/hamburger.jpg" alt=""></p>
+    <p><img src="images/chibug.jpg" alt=""></p>
   </div>
 
 </body>
