--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
     </li>
 
     <li>
+      <a href="services.html">Catering packages</a>
+    </li>
+
+    <li>
       <a href="AboutUs.html">About Us</a>
     </li>
   </ul>
 
-  <div><img src="images/buffet.jpg" alt=""></div>
+  <div><img src="images/dinner.jpg" alt=""></div>
 
   
 
