--- a/packages.html
+++ b/packages.html
@@ -23,11 +23,15 @@
     </li>
 
     <li>
+      <a href="services.html">Catering packages</a>
+    </li>
+
+    <li>
       <a href="AboutUs.html">About Us</a>
     </li>
   </ul>
 
-  <p><img src="images/dinner.jpg" alt=""></p>
+  <p><img src="images/hamburger.jpg" alt=""></p>
   </div>
   
 </body>
