--- a/services.html
+++ b/services.html
@@ -27,7 +27,7 @@
       </li>
   
       <li>
-        <a href="AboutUs.html">About Us</a>
+        <a href="aboutUs.html">About Us</a>
       </li>
     </ul>
   
